[package]
name = "evm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#futures = "0.3.30"
#async-std = { version = "1", features = ["attributes", "tokio1"] }
tokio = { version = "1.37.0", features = ["full"] }
ethers = "2.0.14"
eyre = "0.6.12"
#serde = "1.0.197"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
enum-primitive-derive = "0.3.0"
num-traits = "0.2.18"
