[package]
name = "evm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
ethers = "2.0.14"
eyre = "0.6.12"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
enum-primitive-derive = "0.3.0"
num-traits = "0.2.18"
dotenv = "0.15.0"
#bnum = "0.11.0"
#integer = { git = "https://github.com/eduardo-yuschuk/integer.git", branch = "main" }
